Refactored base...
@TODO: ask Gavin about tmpreaper.
@TODO: new base.